local data dump

--- a/crawler/package.json
+++ b/crawler/package.json
@@ -6,7 +6,6 @@
 		"phantom": "latest",
 		"jquery": "latest",
 		"jsdom": "latest",
-		"colors": "latest",
-		"request": "latest"
+		"colors": "latest"
 	}
 }
