Added highcharts time series

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -217,36 +217,6 @@
           "parents": [],
           "type": "css"
         },
-        "215a9dab": {
-          "id": "215a9dab",
-          "path": "site/js/Chart.min.js",
-          "output": "site/js/Chart.min-dist.js",
-          "name": "Chart.min.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "b3691c54": {
-          "id": "b3691c54",
-          "path": "site/js/charts.js",
-          "output": "site/js/charts-dist.js",
-          "name": "charts.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "c97e8161": {
           "id": "c97e8161",
           "path": "site/js/jquery.min.js",
@@ -442,6 +412,101 @@
           "path": "site/js/jquery.tooltipster.min.js",
           "output": "site/js/jquery.tooltipster.min-dist.js",
           "name": "jquery.tooltipster.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "4974f618": {
+          "id": "4974f618",
+          "path": "site/js/bootstrap.min.js",
+          "output": "site/js/bootstrap.min-dist.js",
+          "name": "bootstrap.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "0235751c": {
+          "id": "0235751c",
+          "path": "site/css/charts.scss",
+          "output": "site/css/charts.css",
+          "name": "charts.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "nodeSassCompress": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "0f874c03": {
+          "id": "0f874c03",
+          "path": "site/css/charts.css",
+          "output": "site/css/charts-dist.css",
+          "name": "charts.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "d9179db6": {
+          "id": "d9179db6",
+          "path": "site/js/highcharts.js",
+          "output": "site/js/highcharts-dist.js",
+          "name": "highcharts.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "b3691c54": {
+          "id": "b3691c54",
+          "path": "site/js/charts.js",
+          "output": "site/js/charts-dist.js",
+          "name": "charts.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "89e365da": {
+          "id": "89e365da",
+          "path": "site/js/time-series.js",
+          "output": "site/js/time-series-dist.js",
+          "name": "time-series.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
