major url and history reworking
note: still need to figure out script loading issues

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -516,12 +516,42 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "9c43cab5": {
+          "id": "9c43cab5",
+          "path": "site/js/jquery.history.js",
+          "output": "site/js/jquery.history-dist.js",
+          "name": "jquery.history.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "4b9649cf": {
+          "id": "4b9649cf",
+          "path": "site/js/History.js",
+          "output": "site/js/History-dist.js",
+          "name": "History.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
       "config": {
         "watch": "",
-        "liveRefresh": true,
+        "liveRefresh": false,
         "useCustomServer": false,
         "port": 0,
         "useCustomPort": false,
